update api get list drugstore
